<resources>
    <string name="app_name">REDCAN</string>
    <string name="title_activity_driver_home">DriverHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Neeraj</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menus_home">Home</string>
    <string name="menu_earning">Earnings</string>
    <string name="menu_wallet">Wallet</string>
    <string name="menu_account">Account</string>
    <string name="menu_settings">Settings</string>


    <string name="mobile">mobile</string>
    <string name="drivername">drivername</string>
    <string name="home">Home</string>
    <string name="discover">Discover</string>
    <string name="payments">Payments</string>
    <string name="chats">Chats</string>
    <string name="trips">Trips</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="wish">Good Morning</string>
    <string name="menu_home">Menu</string>
    <string name="menu_gallery">Gallery</string>


    <string name="title_activity_maps">Map</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="service_type">Service Type</string>
    <string name="brand_auto_suggestions">Brand( auto Suggestions)</string>
</resources>