<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">



    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_earnings"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_earning" />
        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_wallet" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/bank_logo"
            android:title="@string/menu_account" />

    </group>
</menu>