<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">


    <fragment
        android:id="@+id/nav_home"
        android:name="com.neeraj.redcan.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_account"
        android:name="com.neeraj.redcan.ui.wallet.WalletFragment"
        android:label="@string/menu_earning"
        tools:layout="@layout/fragment_earnings"/>

    <fragment
        android:id="@+id/nav_earnings"
        android:name="com.neeraj.redcan.ui.wallet.WalletFragment"
        android:label="@string/menu_wallet"
        tools:layout="@layout/fragment_wallet" />

    <fragment
        android:id="@+id/nav_wallet"
        android:name="com.neeraj.redcan.ui.account.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />


</navigation>